# FashionLens-AI-Garment-Classification-Web-App

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py
app/db/: images_info.json  master_attributes.json
app/eval/: eval_model.py  ground_truth.json
app/fashion_agent/: __init__.py  graph.py  main.py  models.py  prompt.py  storage.py
app/llm/: llm_client.py
app/tests/: test_backend.py
app/ui/: app.py
app/ui/static/css/: style.css
app/ui/static/js/: main.js
app/ui/templates/: base.html  detail.html  index.html  upload.html
eval/: eval_model.py
local_test/: target_output.json  test_classify.py
project_docs/: fashion_case_study_one_pager.docx
tests/: test_backend.py
